--- a/Dia 11/style.css
+++ b/Dia 11/style.css
@@ -8,13 +8,106 @@ font-family: 'Oxanium', cursive;
 }
 
 body{
-    text-align: center;
-    background: linear-gradient(rgb(73, 171, 236), rgb(233, 225, 229));
+    height: 100vh;
+    margin: 0;
+    background-image: linear-gradient(to bottom, #7edbff, #ffffff);
+
 }
-.imagen{
+.pokemondata {
     position: absolute;
-    padding: 50vi;
-    height: 1vi;
-    width: 1vi;
+    font-weight: 600;
+    color: #aaa;
+    top: 28vi;
+    right: 27%;
+    font-size: 1.8vi;
+    left: 51vi;
+  }
+
+
+.input1 {
+    position: absolute;
+    width: 15.5vi;
+    height: 2.7vi;
+    outline: none;
+    border: 2px solid #333;
+    border-radius: 5px;
+    font-weight: 600;
+    color: #3a444d;
+    font-size: clamp(8px, 5vw, 1rem);
+    box-shadow: -3px 4px 0 #888, -5px 7px 0 #333;
+    left: 38.3vi;
+    top: 27vi;
+
+  }
+
+
+
+.button1 {
+    position: absolute;
+    width: 7vi;
+    padding: 0.5vi;
+    border: 2px solid #000;
+    border-radius: 5px;
+    font-size: clamp(8px, 5vw, 1rem);
+    font-weight: 600;
+    color: white;
+    background-color: #444;
+    box-shadow: -2px 3px 0 #222, -4px 6px 0 #000;
+    top: 32vi;
+    left: 38vi;
+  }
+  .button1:active {
+    transform: translateY(4px); 
+  }
+.button2 {
+    position: absolute;
+    width: 7vi;
+    padding: 0.5vi;
+    border: 2px solid #000;
+    border-radius: 5px;
+    font-size: clamp(8px, 5vw, 1rem);
+    font-weight: 600;
+    color: white;
+    background-color: #444;
+    box-shadow: -2px 3px 0 #222, -4px 6px 0 #000;
+    top: 32vi;
+    left: 47vi;
+  }
+  .button2:active {
+    transform: translateY(4px);
+  }
+
+.imagen1{
+  position: absolute;
+  left: 35.8vi;
+  top: 5vi;
+}
+
+.clear-input-btn {
+  position: absolute;
+  top: 27.5vi;
+  left: 52vi;
+  cursor: pointer;
+  border: none;
+  background: transparent;
+  font-size: 17px;
+  color: #999;
+  width: 0vi;
+}
+
+.name{
+  position: absolute;
+  top: 23vi;
+  right: 47.5vi;
+  font-size: 1.5vi;
+  color: black;
+  font-family: 'Oxanium', sans-serif;
+}
+
+.gif{
+  position: absolute;
+  width: 6vi;
+  top: 15.5vi;
+  left: 42.5vi;
 }
 
