--- a/Dia 12/Style.css
+++ b/Dia 12/Style.css
@@ -1,3 +1,14 @@
 body{
     background-color: gray;
 }
+.button {
+	background-color: aliceblue;
+	border: none;
+	color: black;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+	border-radius: 2vi;
+	cursor: pointer;
+  }
